# Legacy

./: .gitignore  README.md
25-prototype/: 25-prototype.ino  idle_switch.ino  motorcontroller.ino  otos.ino  ultrasonic.ino  y_robot.ino  z_main.ino
Computer-Vision/: README.md  read_rpi_camera.py
Computer-Vision/cpp/capture_image/: CMakeCache.txt  CMakeLists.txt  Makefile  capture_image  capture_image.cpp  cmake_install.cmake
Computer-Vision/cpp/find_goal/: CMakeLists.txt  main.cpp
Computer-Vision/labelbox2yolo/: Export v2 project - Goal Detection - 11_10_2024.ndjson  labelbox2yolo.py
Computer-Vision/python/: blue_detection.py  read_rpi_camera.py  yellow_detection.py  yellow_detection_text.py
Move_with_otos_18-12-24/: Move_with_otos_18-12-24.ino  bluetooth.ino
OTOs_Error_code/: OTOs_Error_code.ino  otos.ino
docs/: index.html
esp_codes/: README.md
general-testing-codes/: Dribbler_Testing.ino
pio-template/include/: pins.h
pio-template/src/: main.cpp
platformio-project/: info.txt  platformio.ini
platformio-project/include/: bot_data.h  constants.h  pins.h
platformio-project/src/: main.cpp
prototype-robot-code/25-prototype/: bluetooth.ino  ir.ino  motorcontroller.ino  pid.ino
prototype-robot-code/Move_with_otos_18-12-24/: ultrasonic.ino  y_robot.ino  z_main.ino
prototype-robot-code/OTOs_Error_code/: bluetooth.ino  ultrasonic.ino  y_robot.ino  z_main.ino
prototype-robot-code/motor-controller/: motor_controller.cpp
prototype_ls_code/: prototype_ls_code.ino
rpi_uart_to_arduino/: arduino.ino  rpi.cpp
visualisers/ir-visualiser/: main.py  (+2 more)
(+82 files in other folders)
